--- a/index.css
+++ b/index.css
@@ -17,6 +17,10 @@ i{
     cursor: pointer;
 }
 
+.fa-solid {
+    color: #999;
+}
+
 .liked{
     color: red;
 }
@@ -52,6 +56,8 @@ textarea{
     width: 100%;
     font-size: 20px;
     line-height: 30px;
+    font-family: 'Roboto', sans-serif;
+    resize: none;
 }
 
 button{
@@ -114,6 +120,13 @@ button{
 }
 
 /* images */
+
+.pic {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px;
+}
 
 .profile-pic{
     border: 1px solid lightgray;
